--- a/gmall-user/src/main/resources/application.yml
+++ b/gmall-user/src/main/resources/application.yml
@@ -4,3 +4,4 @@ spring:
     password: 123456
     url: jdbc:mysql://127.0.0.1:3306/mall?serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
+#debug: true
